--- a/src/BrightMoon/Exceptions/resources/css/style.css
+++ b/src/BrightMoon/Exceptions/resources/css/style.css
@@ -1,23 +1,26 @@
 :root {
-    --color-grey: #eeeeee;
-    --color-grey-opacity: #eeeeee33;
+    --color-blue: #60a5fa;
+    --color-cyan: #67e8f9;
     --color-dark: #232323;
+    --color-dark-blue: #3b82f6;
+    --color-dark-orange: #f97316;
+    --color-gray: #eeeeee;
+    --color-gray-opacity: #eeeeee33;
     --color-green: #c3e88d;
-    --color-orange: #ffcb8b;
-    --color-blue: #82aaff;
-    --color-violet: #c792ea;
-    --color-dark-orange: #f78c6c;
+    --color-orange: #fb923c;
     --color-shadow: #d1d1d1;
+    --color-violet: #c792ea;
+    --color-yellow: #facc15;
 }
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Roboto, Arial, sans-serif;
     font-size: 14px;
 }
 body {
     background-color: #f0f0f0;
+    font-family: Roboto, Arial, sans-serif;
 }
 
 a {
@@ -132,7 +135,7 @@ header > .content > .info {
 header > .content > .info > .class {
     color: #000;
     margin-bottom: 1.75rem;
-    background-color: var(--color-grey);
+    background-color: var(--color-gray);
     padding: 1.25rem;
     border-radius: 5px;
 }
@@ -186,19 +189,20 @@ ul li:hover {
 
 #stack {
     display: flex;
-    border-bottom: 1px solid var(--color-grey);
+    border-bottom: 1px solid var(--color-gray);
     margin-bottom: 3rem;
     padding-bottom: 3rem;
 }
 
 .request-info {
     display: flex;
+    align-items: center;
+    gap: .5rem;
 }
 
 .request-url {
     font-size: 1.25rem;
     color: var(--color-blue);
-    margin-right: 0.5rem;
     padding: 0.125rem 0;
 }
 
@@ -207,7 +211,6 @@ ul li:hover {
     padding: 0.125rem 0.375rem;
     text-transform: uppercase;
     font-size: 0.75rem;
-    line-height: 1.25rem;
     border-radius: 3px;
     max-height: 1.5rem;
 }
@@ -263,13 +266,13 @@ ul li:hover {
     overflow-x: scroll;
 }
 .code-content .line {
-    color: var(--color-grey);
+    color: var(--color-gray);
     margin-bottom: 0.5rem;
     font-family: monospace;
 }
 
 .code-content .line-comment {
-    color: var(--color-green);
+    color: var(--color-gray-opacity);
 }
 
 .code-content .line .line-number,
@@ -285,9 +288,28 @@ ul li:hover {
     margin-right: 1rem;
 }
 
-.code-content .line.hightlight {
+.hightlight-keyword {
+    color: var(--color-violet);
+}
+
+.hightlight-title {
+    color: var(--color-yellow);
+}
+
+.hightlight-name {
+    color: var(--color-dark-blue);
+}
+
+.hightlight-result {
+    color: var(--color-cyan);
+}
+
+.hightlight-create {
     color: var(--color-orange);
-    background-color: var(--color-grey-opacity);
+}
+
+.code-content .line.hightlight {
+    background-color: var(--color-gray-opacity);
 }
 
 @media (max-width: 1025px) {
